<resources>
    <string name="app_name">ExoPlayer Screen Lock</string>
    <string name="enter_full_screen">Tam ekrana geç</string>
    <string name="exit_full_screen">Tam ekrandan çık</string>
    <string name="lock_controls">Kontrolleri kilitle</string>
    <string name="unlock_controls">Kontrollerin kilidini aç</string>
    <string name="play">Oynat</string>
    <string name="pause">Duraklat</string>
    <string name="rewind">5 saniye geri sar</string>
    <string name="fast_forward">5 saniye ileri sar</string>
    <string name="time_separator">/</string>
</resources>
